# dynalogic-agro-met-equations-pkg

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
AgroMetEquations/: __init__.py  _check.py  auxiliary.py  config.py  convert.py  evapotranspiration_equations.py  fao.py  general.py  thornthwaite.py  thornthwaite_mather_1955_waterbalance.py
AgroMetEquations/tests/: test_fao.py
tests/: get_water_balance.py  test_fao.py  test_runl.py  test_water_balance.py
